--- a/index.html
+++ b/index.html
@@ -47,25 +47,23 @@
                     TECHNICAL SKILLS</h3>
                 <h5 style="font-weight: bold;">Programming Languages:</h5>
                 <ul>
-                    <li><strong>C#:</strong> .NET Core, object-oriented programming, SOLID principles, game development
+                    <li><strong>C#:</strong> .NET Core, object-oriented programming, game development
                         with Unity.</li>
                     <li><strong>JavaScript:</strong> Server-side development with Node.js, asynchronous programming,
                         RESTful API design, and handling real-time data using WebSocket.</li>
-                    <li><strong>C/C++:</strong> Proficient in object-oriented programming (OOP), implementing SOLID
-                        principles, memory management (dynamic allocation, pointers).</li>
+                    <li><strong>C/C++:</strong> Proficient in object-oriented programming (OOP), memory management
+                        (dynamic allocation, pointers).</li>
                 </ul>
                 <h5 style="font-weight: bold;">Frameworks:</h5>
                 <ul>
-                    <li><strong>Express.js:</strong> RESTful API design, middleware integration, and real-time
-                        communication using WebSocket.</li>
-                    <li><strong>ASP.NET Core:</strong> Backend development with C#, RESTful API creation, dependency
+                    <li><strong>Express.js:</strong> Backend framework for RESTful API design, middleware integration,
+                        and WebSocket support.</li>
+                    <li><strong>ASP.NET Core:</strong> Backend development with C#, including RESTful APIs, dependency
                         injection, and middleware pipeline.</li>
-                    <li><strong>Vue.js:</strong> Component-based UI development, state management with Vuex, and
-                        building single-page applications (SPA).</li>
-                    <li><strong>Node.js:</strong> Server-side scripting, asynchronous programming, and event-driven
-                        architecture for scalable applications.</li>
-                    <li><strong>React.js:</strong> Declarative UI design, component-based architecture, state
-                        management, and client-side routing.</li>
+                    <li><strong>Vue.js:</strong> Component-based UI development, state management with Vuex/Pinia, and
+                        single-page applications (SPA).</li>
+                    <li><strong>React.js:</strong> Declarative UI, component-based architecture, state management, and
+                        client-side routing.</li>
                 </ul>
 
                 <h5 style="font-weight: bold;">Database:</h5>
@@ -75,6 +73,19 @@
                     <li><strong>PostgreSQL:</strong> Creating and maintaining databases, writing advanced SQL queries,
                         managing schemas, and working with extensions for advanced functionalities (e.g., PostGIS).</li>
                 </ul>
+
+                <h5 style="font-weight: bold;">Version Control:</h5>
+                <ul>
+                    <li><strong>Git, GitHub:</strong> Managing source code, collaborating with teams, and handling
+                        version control workflows.</li>
+                </ul>
+
+                <h5 style="font-weight: bold;">Tools:</h5>
+                <ul>
+                    <li><strong>Figma:</strong> UI/UX design, prototyping, and collaboration in software development.
+                    </li>
+                </ul>
+
 
 
                 <!-- Other Skills -->
@@ -100,16 +111,17 @@
                     University of Science, Vietnam National University
                 </strong>
                 <div>
-                    Expected graduation: 2026</div>
-                <p><strong>GPA:</strong> 8.43/10</p>
+                    <strong>Expected graduation:</strong> 2026
+                </div>
+                <p><strong>GPA:</strong> 8.44/10</p>
 
                 <!-- Objective -->
                 <h2 class="section-title">OBJECTIVE</h2>
                 <p>
-                    Aspiring Backend Developer with a strong foundation in software engineering and experience in
-                    building scalable applications using technologies like Node.js, Express.js, React.js...
-                    Seeking an internship opportunity to apply and enhance my skills in designing efficient APIs,
-                    managing databases, and working in a collaborative team environment.
+                    Enthusiastic Software Engineering student with a passion for backend development. Familiar with
+                    developing scalable applications using .NET Core and Express.js. Seeking an internship opportunity
+                    to apply my skills in API design, database management, and team collaboration in a real-world
+                    environment.
                 </p>
                 <!-- <p>
                     Aspiring Software Tester with a solid foundation in software engineering and a keen interest in
@@ -138,13 +150,39 @@
                         Managed database schemas, ensuring smooth integration with the application.
                         Utilized PostgreSQL extensions such as PostGIS for advanced features.</li>
                     <li><strong>Key Technologies:</strong> MVC Design Pattern, HBS Template, Node.js, Express.js,
-                        PostgreSQL</li>
+                        PostgreSQL, Render</li>
                     <li><strong>GitHub:</strong> <a
                             href="https://github.com/nguyenvinhluong242004/Web_Comic">https://github.com/nguyenvinhluong242004/Web_Comic</a>
                     </li>
                     <li><strong>Link Website:</strong> <a
                             href="https://comic-sv1.onrender.com">https://comic-sv1.onrender.com</a></li>
                 </ul>
+
+                <!-- Movie Website -->
+                <div class="row">
+                    <h5 class="col-md-7" style="font-weight: bold;">Movie Website</h5>
+                    <h5 class="col-md-5" style="font-weight: bold;">Nov 2024 - Dec 2024</h5>
+                </div>
+                <strong>Personal - Frontend Developer</strong>
+                <ul>
+                    <li><strong>Description:</strong> Developing a movie streaming web application that consumes
+                        external APIs for movie data,
+                        ensuring a smooth and responsive user experience.</li>
+                    <li><strong>Responsibility:</strong>
+                        Integrated third-party movie APIs to fetch and display movie data dynamically.
+                        Designed and implemented interactive UI components for browsing and searching movies.
+                        Optimized API calls to enhance performance and minimize loading times.
+                        Managed client-side state efficiently to improve user interactions.
+                        Deployed the frontend on Render for easy accessibility.</li>
+                    <li><strong>Key Technologies:</strong> MVC Design Pattern, HBS Template, JavaScript, Node.js,
+                        Express.js, Render</li>
+                    <li><strong>GitHub:</strong> <a
+                            href="https://github.com/nguyenvinhluong242004/Web_Movie">https://github.com/nguyenvinhluong242004/Web_Movie</a>
+                    </li>
+                    <li><strong>Link Website:</strong> <a
+                            href="https://movie-sv1.onrender.com">https://movie-sv1.onrender.com</a></li>
+                </ul>
+
 
 
                 <!-- Personal Projects -->
